[package]
name = "btle"
description = "Lightweight Bluetooth Low Energy Drivers. WIP and very not stable yet!! Designed for https://github.com/AndrewGi/BluetoothMeshRust"
version = "0.1.3"
license = "GPL-3.0-only"
readme = "README.md"
authors = ["AndrewGi <andrew@gilbrough.com>"]
edition = "2018"
repository = "https://github.com/AndrewGi/btle/tree/master"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["hci",  "std"]
bluez = ["nix", "libc", "std", "hci", "tokio/uds"]
winrt_drivers = ["winrt", "std"]
hci = []
hci_usb = ["hci", "rusb"]
remote = ["std", "hci"]
std = []

[dependencies]
winrt = {version = "0.6.0", default_features = false, features = ["windows-devices", "windows-storage"], optional = true}
nix = {version = "0.16.1", optional = true}
libc = {version = "0.2.66", optional = true}
tokio = {version = "0.2.13", optional = true, default_features = false}
rusb = {version = "0.5.5", optional = true}
futures-util = "0.3.4"

[[example]]
name = "advertisement_dump"
required-features = ["bluez"]

[[example]]
name = "windows_test"
required-features = ["windows_drivers"]

[[example]]
name = "usb_test"
required-features = ["hci_usb"]

[dev-dependencies]
tokio = "0.2.18"